@@ -1,4 +1,4 @@
-% Copyright 2014-2016 Frédéric Vincent, Thibaut Paumard
+% Copyright 2014-2016, 2018 Frédéric Vincent, Thibaut Paumard
 %
 % This file is part of Gyoto.
 %
@@ -537,7 +537,7 @@ Get help on Gyoto:
 Read scenery from XML:
 \begin{code}
   a=gyoto.Factory("../doc/examples/example-moving-star.xml")
-  sc=a.getScenery()
+  sc=a.scenery()
 \end{code}
 Create Astrobj by name, access property by name:
 \begin{code}
